# apps

./: .project  README.md
Algo/: ABC_srdag.diagram  ABC_srdag.pi  dummy_top.diagram  dummy_top.pi
Archi/: 128CoresX86.layout  128CoresX86.slam  8Nodes.layout  8Nodes.slam  8Nodes2.layout  node0-2CoreX86.layout  node1-4CoreX86.layout  node1-4CoreX86.slam  node2-8CoreX86.layout  node2-8CoreX86.slam
MPI.helloWorld/: CMakeLists.txt  README.md  main.c
MPI.project.ABC/: CMakeLists.txt  README.md  core0.c  core1.c  core10.c  core11.c  core12.c  core13.c  core14.c  core15.c  core2.c  core3.c  core4.c  core5.c  core6.c  core7.c  core8.c  core9.c  main.c  preesm.h  sub0.c  sub1.c  sub2.c
Scenarios/: 8x16_ABC.scenario
Workflows/: Codegen2.layout  Node-partitioner.layout  SCAPE.layout
dummy.abc/: .project
dummy.abc/Algo/: dummy_top.pi
dummy.abc/Archi/: 24CoresX86.slam  3Nodes.layout  3Nodes.slam  4scratchy_cluster.slam  8Nodes2.slam  node0-2CoreX86.slam  top.layout
dummy.abc/Scenarios/: ABC-8node-round0.scenario  ABC-8node-round1-2.scenario  ABC-8node-round1.scenario  genuine_1core.scenario  genuine_scape_1core.scenario  genuine_scape_24core.scenario  nx.scenario  sub0_4core.scenario  sub1_6core.scenario  sub2_6core.scenario  top.layout  top_3node.scenario
dummy.abc/Workflows/: Codegen2.workflow  Node-partitioner.workflow  SCAPE.workflow
stereo/: .project  README.md
stereo.part/: .project  README.md
stereo.part/Workflows/: SimGrid_formater.layout  SimGrid_formater.workflow  node_partitioner.layout  node_partitioner.workflow  thread_partitioner.layout  (+1 more)
(+78 files in other folders)
